--- a/Config/config.yaml
+++ b/Config/config.yaml
@@ -2,6 +2,6 @@ automationName: UiAutomator2
 platformName: Android
 platformVersion: 7.1
 deviceName: huawei
-appPackage: com.lemon.lemonban
-appActivity: com.lemon.lemonban.activity.WelcomeActivity
+appPackage: com.xxx
+appActivity: com.xxxx.activity.WelcomeActivity
 noReset: True
